--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
+{% block 'cabecalho' %}
+<link href="{% static 'usuarios/css/cadastro.css' %}" rel="stylesheet">
+{% endblock %}
 
 {% block 'conteudo' %}
 <div class="bg1">
@@ -7,10 +11,10 @@
             <div class="col-md">
                 <div class="box-titulo">
                     <div class="box-titulo-item">
-                        <img src="">
+                        <img src="{% static 'usuarios/img/logo.png' %}">
                     </div>
                     <div style="margin-top: auto; margin-bottom: auto;" class="box-titulo-item">
-                        <h3 >Study.Async 01:02:50</h3>
+                        <h3 >Study.Async</h3>
                     </div>
                 </div>
                 <hr class="divisor">
@@ -29,8 +33,8 @@
                         <div class="circle c3"></div>
                     </div>
                     <br>
-                    <h3>Cadastre-se</h3>
-                    <form action="" method="POST">
+                    <h3>Cadastre-se 01:39:17</h3>
+                    <form action="{% url 'cadastro' %}" method="POST"> {% csrf_token %}
                         <label>Username</label>
                         <input type="text" class="input-form" name="username" id="">
                         <br>
